--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,5 @@
 p {
-    color: blue;background-color: antiquewhite;
+    color: antiquewhite;background-color: blue;
     font-family: 'Times New Roman', Times, serif;
 }
 h1 {
