--- a/estilos.css
+++ b/estilos.css
@@ -1,10 +1,4 @@
-body {
-    color: antiquewhite;background-color: blue;
-    font-family: 'Times New Roman', Times, serif;
-}
-h1 {
-    color: black;font-family: Arial, Helvetica, sans-serif;
-}
-a: hover {
-    color: orange;
+body{
+    background-color: antiquewhite;
+    font-family: Arial, Helvetica, sans-serif;
 }
