--- a/estilos.css
+++ b/estilos.css
@@ -1,10 +1,14 @@
 body{
-    
+    background-color: cadetblue;
     font-family: Arial, Helvetica, sans-serif;
+    color: teal;
 }
 a:hover{
-    background-color: cyan;
+    color: cornflowerblue;
+    background-color: yellow;
+
 }
 a:visited{
     color: green;
+    background-color: blueviolet;
 }
