--- a/estilos.css
+++ b/estilos.css
@@ -1,7 +1,7 @@
 body{
-    background-color: cadetblue;
+    background-color: cyan;
     font-family: Arial, Helvetica, sans-serif;
-    color: teal;
+    color: darkred;
 }
 a:hover{
     color: cornflowerblue;
