--- a/estilos.css
+++ b/estilos.css
@@ -5,9 +5,12 @@ body{
 }
 a:hover{
     color: purple;
+    background-color: orange;
+
 }
 a:active{
     color: orange;
+    background-color: purple;
 }
 a:visited{
     background-color: yellow;
